[project]
name = "ai-recruiter"
version = "0.1.0"
description = "A Job screening AI Agent"
authors = [
    {name = "Akhilesh Malhti",email = "akhileshmalthi2299@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
